# rustwester

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  hello.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: autofix.yml  build-docker.yml  build.yml
src/: main.rs
src/tests/: integration_test.rs
src/utils/: logging.rs  mod.rs  structs.rs
