[package]
name = "rustwester"
version = "1.0.0"
edition = "2021"
authors = ['Cristian Iordachescu <cristian.iordachescu@ivfuture.uk>']

[profile.release]
debug = false # This strips the debug information
lto = true
opt-level = 3 # Optimize for minimal binary size

[[bin]]
name = "rustwester"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = [
    "derive",
    "env",
    "cargo",
    "unicode",
    "wrap_help",
] }
colored = { version = "2.1.0", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
gethostname = "0.5.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["full"] }
