[package]
name = "rustwester"
version = "2.0.0"
edition = "2021"
authors = ['Cristian Iordachescu <cristian.iordachescu@ivfuture.uk>']

[profile.release]
debug = false # This strips the debug information
lto = true
opt-level = 3 # Optimize for minimal binary size

[[bin]]
name = "rustwester"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = [
    "derive",
    "env",
    "cargo",
    "unicode",
    "wrap_help",
] }
colored = { version = "2.2.0", features = ["no-color"] }
fern = { version = "0.7.1", features = ["colored"] }
gethostname = "0.5.0"
log = "0.4.22"
maud = { version = "0.26.0", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
tokio = { version = "1.44.0", features = ["full"] }
